--- a/package.json
+++ b/package.json
@@ -2,5 +2,25 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.15",
     "tailwindcss": "^4.1.15"
-  }
+  },
+  "name": "tailwind_udemy",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/edamame13/tailwindcss_practice.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/edamame13/tailwindcss_practice/issues"
+  },
+  "homepage": "https://github.com/edamame13/tailwindcss_practice#readme",
+  "description": ""
 }
